--- a/online-zoo/pages/map/styles.css
+++ b/online-zoo/pages/map/styles.css
@@ -6,30 +6,33 @@ html {
   font-size: 10px;
 }
 
-/* header ------------------------------------------------------------------------------------------------------------ */
-
 .page {
   position: relative;
   background-color: #a7e1ff;
 }
 
+/* header ------------------------------------------------------------------------------------------------------------ */
+
 .header {
-  width: 1920;
+  width: 1920px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: start;
   margin: auto;
+  transition: 2s;
+  transition-timing-function: cubic-bezier(-0.5, -1.5, 0.1, 1.5);
 }
 
 .header__flex {
   width: 1160px;
-  padding: 0 380px 0;
   height: 80px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   margin: 0 auto -80px;
   z-index: 5;
+  transition: 2s;
+  transition-timing-function: cubic-bezier(-0.5, -1.5, 0.1, 1.5);
 }
 
 .hidden-heading {
@@ -82,25 +85,71 @@ html {
   pointer-events: none;
 }
 
+.header__burger {
+  display: none;
+}
+
+@media (max-width: 1919px) {
+  .header {
+    width: 1200px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .header {
+    width: 640px;
+  }
+  .header__flex {
+    width: 600px;
+    transition-timing-function: cubic-bezier(-0.5, -1.5, 0.1, 1.5);
+  }
+  .header__logo {
+    margin-right: 50px;
+  }
+}
+
+@media (max-width: 639px) {
+  .header {
+    width: 320px;
+  }
+
+  .header__flex {
+    width: 300px;
+    justify-content: space-between;
+  }
+
+  .header__nav {
+    display: none;
+  }
+
+  .header__burger {
+    display: initial;
+    cursor: pointer;
+  }
+}
+
 /* Sidebar ------------------------------------------------------------------------------------------------------------ */
 
 .map {
   width: 1920px;
   box-sizing: border-box;
   margin: auto;
-  padding: 0 380px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #a7e1ff;
+  overflow: hidden;
 }
+
 .map__img {
   width: 1160px;
   height: 745px;
   margin-top: 180px;
 }
+
 .map__icons {
   position: relative;
+  z-index: 3;
 }
 
 .map__pointers {
@@ -285,6 +334,214 @@ html {
   background-image: url(../../assets/icons/gorilla_selected.png);
 }
 
+@media (max-width: 1919px){
+  .map {
+    width: 1200px;
+  }
+  
+  .map__img {
+    width: 1160px;
+    height: 745px;
+  }
+
+  .item_zoom {
+    top: 857px;
+    left: 538px;
+  }
+}
+
+@media (max-width: 1199px){
+  .map {
+    width: 640px;
+  }
+  
+  .map__img {
+    width: 933px;
+    height: 600px;
+  }
+  
+  .item_zoom {
+    top: 712px;
+    left: 258px;
+  }
+  
+  .item_alligator {
+    top: 491px;
+    left: -221px;
+  }
+  .item_panda {
+    top: 486px;
+    left: 275px;
+  }
+  .item_gorilla {
+    top: 571px;
+    left: 60px;
+  }
+  
+  .item_text-1 {
+    position: absolute;
+    top: 479px;
+    left: -309px;
+  }
+  .item_text-2 {
+    position: absolute;
+    top: 610px;
+    left: -64px;
+  }
+  .item_text-3 {
+    position: absolute;
+    top: 497px;
+    left: 195px;
+  }
+}
+
+@media (max-width: 639px){
+  .map {
+    width: 320px;
+  }
+  
+  .map__img {
+    position: relative;
+    left: 118px;
+    bottom: 1px;
+  }
+  
+  .item_alligator {
+    left: -102px;
+  }
+  
+  .item_gorilla {
+    left: 210px;
+  }
+  
+  .item_text-2 {
+    position: absolute;
+    left: 55px;
+  }
+
+  .item_zoom {
+    left: 98px;
+  }
+}
+/* .map__icons {
+  position: relative;
+}
+
+
+  .map__pointers {
+    position: relative;
+  }
+  
+  .map__item {
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    margin-bottom: 8px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+  }
+  
+  .map__item:hover .item__logo {
+    transition: 0.5s;
+  }
+  
+  .map__item_selected {
+    box-shadow: none;
+  }
+  
+  .map__tooltip {
+    position: relative;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    min-width: fit-content;
+    height: 47px;
+    margin: 0;
+    display: none;
+  }
+  
+  .map__item:hover .map__tooltip {
+    display: flex;
+  }
+  
+  .tooltip__tip {
+    width: 9px;
+    height: 9px;
+  }
+  
+  .tooltip__text {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-width: 102px;
+    width: fit-content;
+    height: 47px;
+    background: #70cb0e;
+  }
+  
+  .tooltip__text {
+    text-align: center;
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.6rem;
+    line-height: 19px;
+    color: #000;
+  }
+  
+  .map__word {
+    display: flex;
+    position: relative;
+    justify-items: center;
+    align-items: center;
+    min-width: fit-content;
+    height: 47px;
+    margin: 7px;
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.6rem;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+  }
+  
+  .map__item:hover .map__word {
+    display: none;
+  }
+  
+  .map__word_eagle {
+    position: relative;
+    top: 0px;
+    left: -125px;
+  }
+  
+  .item_eagle {
+    position: absolute;
+    top: 576px;
+    left: -505px;
+  }
+
+  .item_country-name {
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.6rem;
+    line-height: 19px;
+    text-align: center;
+  }
+  .item__logo {
+    display: block;
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+  } */
+
 /* main ------------------------------------------------------------------------------------------------------------ */
 
 .main__article {
@@ -310,178 +567,25 @@ html {
   text-transform: uppercase;
 }
 
-/* Information ------------------------------------------------------------------------------------------------------------ */
-
-.inf {
-  width: 100%;
-  margin: 30px auto 0;
-  box-sizing: border-box;
-  padding: 0 380px;
+@media (max-width: 1919px) {
+  .main__article {
+    width: 1200px;
+  }
 }
 
-.inf__grid {
-  width: 1160px;
-  margin: 0 auto 0;
-  display: grid;
-  grid-template-areas:
-    "general general"
-    "population habitat"
-    "population habitat"
-    "nutrition interesting"
-    "nutrition interesting";
-  grid-template-rows: 61px 61px 61px 61px 61px;
-  grid-template-columns: 570px 570px;
-  gap: 20px;
+@media (max-width: 1199px) {
+  .main__article {
+    width: 640px;
+  }
 }
 
-.article-grid__population {
-  grid-area: population;
-}
-
-.article-grid__nutrition {
-  grid-area: nutrition;
-}
-
-.article-grid__habitat {
-  grid-area: habitat;
-}
-
-.article-grid__interesting {
-  grid-area: interesting;
-}
-
-.inf_general {
-  width: 1160px;
-  height: 61px;
-  background-color: #a7e1ff;
-  box-sizing: border-box;
-  padding: 20px;
-  display: flex;
-  align-content: center;
-  justify-content: space-between;
-  grid-area: general;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.6rem;
-  line-height: 19px;
-  color: #000;
-}
-
-.general__text {
-  width: 530px;
-}
-
-.inf__article-grid {
-  width: 570px;
-  height: 142px;
-  background-color: #a7e1ff;
-  box-sizing: border-box;
-  padding: 20px;
-  display: grid;
-  grid-template-areas:
-    "heading button"
-    "text button";
-  grid-template-rows: 19px auto;
-  grid-template-columns: 470px 45px;
-  row-gap: 7px;
-  column-gap: 15px;
-}
-
-.inf__heading {
-  grid-area: heading;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.6rem;
-  line-height: 19px;
-  color: #000;
-}
-
-.inf_text {
-  grid-area: text;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.6rem;
-  line-height: 19px;
-  color: #000;
-}
-
-.inf__btn_hide {
-  grid-area: button;
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  background-image: url(../../../assets/icons/btn_hide.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  outline: none;
-  align-self: center;
+@media (max-width: 639px) {
+  .main__article {
+    width: 320px;
+  }
 }
 
 /* footer ------------------------------------------------------------------------------------------------------------ */
-
-.footer {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 80px auto 0;
-  padding-top: 20px;
-  position: relative;
-}
-
-.footer__background-wrap {
-  width: 100%;
-  position: relative;
-  background: #dff5b0;
-}
-
-.footer__bg {
-  box-sizing: border-box;
-  width: 1920px;
-  height: 700px;
-  padding: 0 380px;
-  position: absolute;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.footer__bg-img {
-  margin-top: -290px;
-  margin-bottom: -350px;
-  position: absolute;
-  z-index: -1;
-  bottom: 349px;
-}
-
-.footer__grid {
-  width: 1160px;
-  height: 170px;
-  padding: 80px 380px 20px;
-  margin: 0 auto 0;
-  display: grid;
-  grid-template-areas:
-    "zoo-logo button button ul-1 ul-2"
-    "rss-logo yem-logo copyright copyright reference";
-  grid-template-rows: 46px auto;
-  grid-template-columns: 198px 174px 218px 256px auto;
-}
-
-.footer__logo {
-  grid-area: zoo-logo;
-}
-
-.footer__logo-img {
-  width: 98px;
-  height: 50px;
-}
-
-.btn_action_donate {
-  grid-area: button;
-  width: 230px;
-}
 
 .btn {
   background-color: #70cb0e;
@@ -503,11 +607,65 @@ html {
   box-shadow: inset 0px 0px 25px rgba(0, 0, 0, 0.8);
 }
 
+.footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 80px auto 0;
+  padding-top: 20px;
+  position: relative;
+  background-image: url(../../assets/images/footer_bg_1920.png);
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 2px;
+}
+
+.footer__background-wrap {
+  width: 100%;
+  position: relative;
+  background-color: #dff5b0;
+}
+
+.footer__bg {
+  width: 1920px;
+  height: 700px;
+  position: absolute;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.footer__grid {
+  width: 1160px;
+  height: 170px;
+  padding: 80px 0 20px;
+  margin: 0 auto 0;
+  display: grid;
+  grid-template-areas:
+    "zoo-logo button button ul-1 ul-2"
+    "rss-logo yem-logo copyright copyright reference";
+  grid-template-columns: 198px 174px 218px 256px auto;
+  grid-template-rows: 46px auto;
+}
+
+.footer__logo {
+  grid-area: zoo-logo;
+}
+
+.footer__logo-img {
+  width: 98px;
+  height: 50px;
+}
+
+.btn_action_donate {
+  grid-area: button;
+  width: 230px;
+  height: 50px;
+}
+
 .footer__nav {
   width: 345px;
   grid-area: ul-1;
-  margin: 0;
-  padding: 0;
   list-style-type: none;
 }
 
@@ -578,4 +736,194 @@ html {
   font-size: 1.8rem;
   line-height: 21px;
   color: #000;
+}
+
+@media (max-width: 1919px) {
+  .footer {
+    background-image: url(../../assets/images/footer_bg_1200.png);
+    background-position-y: -47px;
+  }
+  .footer__bg {
+    width: 1200px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .footer {
+    background-image: url(../../assets/images/footer_bg_1200.png);
+    background-position-y: -47px;
+    background-position-x: center;
+    background-size: 200%;
+  }
+
+  .footer__bg {
+    width: 640px;
+  }
+
+  .footer__grid {
+    width: 640px;
+    height: 359px;
+    box-sizing: border-box;
+    padding: 80px 20px 20px;
+    grid-template-areas:
+      "zoo-logo ul-1 ul-1 ul-2"
+      "rss-logo rss-logo yem-logo button"
+      "reference reference reference reference"
+      "copyright copyright copyright copyright";
+    grid-template-columns: 155px 61px 150px 234px;
+    grid-template-rows: 107px 100px 23px 38px;
+  }
+
+  .footer__btn {
+    justify-self: end;
+  }
+
+  .btn_action_donate {
+    width: 207px;
+  }
+
+  .footer__nav {
+    width: 210px;
+    justify-self: start;
+  }
+
+  .contacts__img {
+    margin-left: 10px;
+  }
+
+  .footer__rss-logo {
+    grid-area: rss-logo;
+    align-self: start;
+    justify-self: start;
+  }
+
+  .footer__yem-logo {
+    grid-area: yem-logo;
+    align-self: start;
+    justify-self: start;
+  }
+
+  .footer__copyright {
+    align-self: center;
+    justify-self: center;
+  }
+
+  .footer__reference {
+    align-self: center;
+    justify-self: center;
+  }
+}
+
+@media (max-width: 639px) {
+  .footer {
+    background-image: url(../../assets/images/footer_bg_1200.png);
+    background-position-y: 0px;
+    background-position-x: 3px;
+    background-size: 100%;
+  }
+
+  .footer__bg {
+    width: 320px;
+  }
+
+  .footer__grid {
+    width: 320px;
+    height: 742px;
+    box-sizing: border-box;
+    padding: 80px 10px 20px;
+    grid-template-areas:
+      "zoo-logo zoo-logo"
+      "ul-1 ul-1"
+      "button button"
+      "ul-2 ul-2"
+      "rss-logo yem-logo"
+      "reference reference"
+      "copyright copyright";
+    grid-template-columns: auto auto;
+    grid-template-rows: 100px 179px 100px 90px 101px 31px 42px;
+    justify-items: center;
+    justify-content: center;
+  }
+
+  .footer__btn {
+    margin-right: -4px;
+  }
+  
+  .btn_action_donate {
+    width: 207px;
+    align-self: center;
+    justify-self: center;
+    position: relative;
+    left: 46px;
+  }
+
+  .footer__nav {
+    width: 210px;
+    justify-self: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer__nav-item {
+    float: initial;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
+  .footer__nav-item:nth-child(2) {
+    order: 2;
+  }
+
+  .footer__nav-item:nth-child(3) {
+    order: 1;
+  }
+
+  .footer__nav-item:nth-child(4) {
+    order: 3;
+  }
+
+  .footer__nav-link {
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.8rem;
+    line-height: 21px;
+    color: #000;
+    text-decoration: none;
+  }
+
+  .footer__contacts {
+    justify-self: center;
+    column-gap: 10px;
+  }
+
+  .contacts__img {
+    margin-left: 0px;
+  }
+
+  .footer__rss-logo {
+    grid-area: rss-logo;
+    justify-self: start;
+  }
+
+  .footer__yem-logo {
+    grid-area: yem-logo;
+    justify-self: end;
+  }
+
+  .footer__copyright {
+    width: 220px;
+    align-self: center;
+    justify-self: center;
+    text-align: center;
+  }
+
+  .footer__reference {
+    align-self: start;
+  }
+
+  .footer__copyright_and {
+    display: none;
+  }
 }
