--- a/src/components/score-field/score-field.scss
+++ b/src/components/score-field/score-field.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #00000005;
 }
 
 .score-field__element {
