--- a/src/components/select-input/select-input.scss
+++ b/src/components/select-input/select-input.scss
@@ -1,14 +1,9 @@
-.about-field {
+.select-input {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #00000005;
-}
-
-.about-field__plug-img {
-  width: 100%;
-  height: 100%;
+  background-color: #fff;
 }
