--- a/src/components/select-input/select-input.scss
+++ b/src/components/select-input/select-input.scss
@@ -1,6 +1,6 @@
 .select-input {
-  width: 100%;
-  height: 100%;
+  width: 256px;
+  height: 75px;
   display: flex;
   flex-direction: column;
   justify-content: center;
