--- a/src/components/settings-field/settings-field.scss
+++ b/src/components/settings-field/settings-field.scss
@@ -1,9 +1,10 @@
 .settings-field {
-  width: 100%;
-  height: 100%;
+  width: 1000px;
+  height: 252px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: start;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 1px 18px rgba(0, 0, 0, 0.12),
+  0px 6px 10px rgba(0, 0, 0, 0.14);
   background-color: #fff;
 }
