--- a/src/components/card-panel/card-panel.scss
+++ b/src/components/card-panel/card-panel.scss
@@ -1,9 +1,4 @@
 .card-panel {
-  width: 10px;
-  height: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background-color: #fff;
+  transition: 0.3s;
 }
