--- a/src/components/timer-field/timer-field.scss
+++ b/src/components/timer-field/timer-field.scss
@@ -2,7 +2,7 @@
   width: 256px;
   height: 64px;
   background-color: #fff;
-  margin-bottom: 60px;
+  margin: 0 auto 60px;
   font-weight: 500;
   font-size: 36px;
   line-height: 30px;
