feat: implement on start countdown

--- a/src/components/timer-field/timer-field.scss
+++ b/src/components/timer-field/timer-field.scss
@@ -3,6 +3,9 @@
   height: 64px;
   background-color: #fff;
   margin: 0 auto 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   font-weight: 500;
   font-size: 36px;
