--- a/src/components/popup-register-form/popup-register-form.scss
+++ b/src/components/popup-register-form/popup-register-form.scss
@@ -1,9 +1,10 @@
 .popup-register-form {
   width: 100%;
   height: 393px;
-  background-color: #fafafa;
+  position: relative;
   box-sizing: border-box;
   padding: 33px 19px 26px 21px;
+  background-color: #fafafa;
 }
 
 .input-area {
@@ -12,8 +13,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .input-area_correct {
-background-color: rgba(204, 219, 189, 0.575);
+  background-color: rgba(204, 219, 189, 0.575);
+}
+
+.input-area_incorrect {
+  background-color: rgba(231, 133, 133, 0.575);
 }
