--- a/src/components/popup-input/popup-input.scss
+++ b/src/components/popup-input/popup-input.scss
@@ -17,5 +17,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: lightyellow;
+  background-position: center center;
+  background-size: cover;
 }
