fix: change styles, fix minor bugs

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -20,6 +20,7 @@
 .button_add-user {
   width: 207px;
   height: 36px;
+  margin: -40px 0 10px 15px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -43,6 +44,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 0px 0 10px 15px;
   padding: 10px 16px;
   left: 0%;
   right: 0%;
