--- a/src/components/select-input/select-input.scss
+++ b/src/components/select-input/select-input.scss
@@ -1,6 +1,7 @@
 .select-input {
   width: 256px;
-  height: 60px;
+  height: 30px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
